@@ -1,3 +1,8 @@
+2005-11-08  Audrius Meskauskas  <AudriusA@Bioinformatics.org> 
+
+	* gnu/testlet/javax/swing/JTextField/CopyPaste.java:
+	New test.
+
 2005-11-08  Roman Kennke  <kennke@aicas.com>
 
 	* gnu/testlet/javax/swing/JLayeredPane/getComponentsInLayer.java:
